Adding support for long (converted to String since didn't find a way to map it to a SNMP type) and Boolean (converted to Integer - 0, false or 1, true - since didn't find a way to map it to a SNMP type) for set operation on attribute
git-svn-id: https://mobicents.googlecode.com/svn/trunk/tools/snmp-adaptor@18570 bf0df8d0-2c1f-0410-b170-bd30377b63dc